--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,7 +19,10 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
