--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/consulta?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = admin
+spring.datasource.username = root
 spring.datasource.password = admin
 
 spring.mvc.date-format=yyyy/MM/dd
